# learning-framework

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
adapters/: __init__.py  mock_adapter.py
adapters/frameworks/: __init__.py  keras_adapter.py  pytorch_adapter.py
adapters/loaders/: __init__.py  file_data_loader.py
config/: __init__.py  loader.py  schema.py
core/: __init__.py  contracts.py
docs/: PYTORCH_INTEGRATION_SUMMARY.md
docs/adapters/: pytorch.md
examples/: pytorch_classification.py  pytorch_cnn.py  pytorch_quick_start.py  pytorch_regression.py
services/: __init__.py  experiment_service.py
src/learning_framework/: __init__.py
src/learning_framework/adapters/: __init__.py  mock_adapter.py
src/learning_framework/adapters/frameworks/: __init__.py  keras_adapter.py  pytorch_adapter.py
src/learning_framework/adapters/loaders/: __init__.py  (+1 more)
src/learning_framework/config/: __init__.py  loader.py
src/learning_framework/core/: __init__.py  contracts.py  models.py
src/learning_framework/services/: __init__.py  experiment_service.py
src/learning_framework/utils/: __init__.py  exceptions.py  metrics.py
tests/: __init__.py
tests/unit/adapters/: __init__.py  test_mock_adapter.py
tests/unit/config/: __init__.py  test_loader.py  test_schema.py
tests/unit/core/: __init__.py  test_contracts.py  test_models.py
tests/unit/loaders/: __init__.py  test_file_data_loader.py
tests/unit/services/: test_experiment_service.py
tests/unit/utils/: __init__.py  test_exceptions.py  test_metrics.py
utils/: __init__.py
(+3 files in other folders)
